fixed tools links spacing

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -39,6 +39,7 @@ header {
 #tools {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
 #tools a {
@@ -556,7 +557,6 @@ select:required:valid
   }
 
   #tools {
-    display: flex;
     flex-direction: row;
   }
 
